--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 alabaster==0.7.12
-anaconda-client==1.2.2
+anaconda-client==1.7.2
 anaconda-navigator==1.9.7
 anaconda-project==0.8.3
 asn1crypto==0.24.0
@@ -14,10 +14,12 @@ backports.os==0.1.1
 backports.shutil-get-terminal-size==1.0.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
+bcrypt==3.1.7
 beautifulsoup4==4.7.1
 bitarray==0.9.3
 bkcharts==0.2
 bleach==3.1.0
+blinker==1.4
 bokeh==1.2.0
 boto==2.49.0
 Bottleneck==1.2.1
@@ -49,6 +51,11 @@ fastcache==1.1.0
 filelock==3.0.12
 flake8==3.7.8
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
 future==0.17.1
 gevent==1.4.0
 glob2==0.7
@@ -88,6 +95,7 @@ libarchive-c==2.8
 lief==0.9.0
 llvmlite==0.29.0
 locket==0.2.0
+login==0.0.6
 lxml==4.3.4
 MarkupSafe==1.1.1
 matplotlib==3.1.0
@@ -146,6 +154,9 @@ pylint==2.3.1
 pyodbc==4.0.26
 pyOpenSSL==19.0.0
 pyparsing==2.4.0
+PyQt5==5.12.3
+PyQt5-sip==4.19.18
+PyQtWebEngine==5.12.1
 pyrsistent==0.14.11
 PySocks==1.7.0
 pytest==5.0.1
@@ -200,6 +211,7 @@ toolz==0.10.0
 tornado==6.0.3
 tqdm==4.32.1
 traitlets==4.3.2
+typed-ast==1.4.0
 unicodecsv==0.14.1
 urllib3==1.24.2
 wcwidth==0.1.7
@@ -207,6 +219,7 @@ webencodings==0.5.1
 Werkzeug==0.15.4
 widgetsnbextension==3.5.0
 wrapt==1.11.2
+WTForms==2.2.1
 wurlitzer==1.0.2
 xlrd==1.2.0
 XlsxWriter==1.1.8
